kustomize/overlays/dev/customer/pixta-downloader/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixta-downloader
  labels:
    app: pixta-downloader
    stage: review
spec:
  selector:
    matchLabels:
      app: pixta-downloader
      stage: review
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pixta-downloader
        stage: review
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::567351176096:role/pixta-downloader
    spec:
      containers:
        - name: pixta-downloader-nginx
          readinessProbe:
            failureThreshold: 5
            httpGet:
              httpHeaders:
                - name: Authorization
                  value: Basic cGl4dGEtZG93bmxvYWRlcjpwaXh0YXZpZXRuYW0=
              path: /health_checks/all
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 30
